# VirtualMachine

./: CMakeLists.txt  README.md
examples/: add_and_store.txt  addi.txt  if_else.txt  loop100.txt  loop500.txt  loop50_addi25.txt  loop50_addi50.txt  operations.txt
include/: CPU.hpp  Instruction.hpp  Memory.hpp  Process.hpp  RAM.hpp  RegisterFile.hpp  VirtualMachine.hpp
include/CPU/: ALU.hpp  Core.hpp  Instruction.hpp  Pipeline.hpp  RegFile.hpp
include/HW/: RAM.hpp
include/HW/CPU/: ALU.hpp  CPUState.hpp  Cache.hpp  Core.hpp  Pipeline.hpp  RegFile.hpp  State.hpp
include/HW/ISA/: Code.hpp  Encoding.hpp
include/HW/RAM/: Allocator.hpp  DataSpace.hpp
include/Hardware/: RAM.hpp
include/Hardware/CPU/: ALU.hpp  Core.hpp  Instruction.hpp  Pipeline.hpp  RegFile.hpp
include/LSH/: CharacteristicMatrix.hpp  LSH.hpp  MinHashSignature.hpp
include/OS/: Bootloader.hpp  FCFS.hpp  Log.hpp  MMU.hpp  Minix.hpp  PCB.hpp  Process.hpp  Scheduler.hpp  VirtualMachine.hpp
include/OS/Scheduler/: FIFO.hpp  FIFOScheduler.hpp  PriorityQueue.hpp  SchedulerBase.hpp
include/OS/Scheduling/: FCFS.hpp
proc/: add_and_store.txt  code.txt  if_else.txt  loop.txt  operations.txt
src/: CPU.cpp  Instruction.cpp  Memory.cpp  Process.cpp  RAM.cpp  RegisterFile.cpp  VirtualMachine.cpp  main.cpp
src/CPU/: ALU.cpp  Core.cpp  Instruction.cpp  Pipeline.cpp  RegFile.cpp
src/HW/: RAM.cpp
src/HW/CPU/: ALU.cpp  Cache.cpp  Core.cpp  Pipeline.cpp  RegFile.cpp  State.cpp
src/HW/ISA/: Code.cpp  Encoding.cpp
src/HW/RAM/: Allocator.cpp  DataSpace.cpp
src/Hardware/: RAM.cpp
src/Hardware/CPU/: ALU.cpp  Core.cpp  Instruction.cpp  Pipeline.cpp  RegFile.cpp
src/LSH/: CharacteristicMatrix.cpp  LSH.cpp  MinHashSignature.cpp
src/OS/: Bootloader.cpp  FCFS.cpp  Log.cpp  MMU.cpp  Minix.cpp  PCB.cpp  Process.cpp  Scheduler.cpp  VirtualMachine.cpp
src/OS/Scheduler/: FIFO.cpp  FIFOScheduler.cpp  PriorityQueue.cpp  SchedulerBase.cpp
src/OS/Scheduling/: FCFS.cpp
